@@ -1017,6 +1017,7 @@
     string=Ql
     aliasof=Qt
     light=25
+    max_light=35
     editor_group=cave, obstacle
 [/terrain_type]
 
@@ -1027,6 +1028,7 @@
     string=Qlf
     aliasof=Qt
     light=25
+    max_light=35
     editor_group=cave, obstacle
 [/terrain_type]
 
@@ -1038,6 +1040,7 @@
     string=Mv
     aliasof=Qt
     light=25
+    max_light=35
     editor_group=rough, obstacle
 [/terrain_type]
 
